# VeryFi

./: DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  FEATURES.md  MIDNIGHT_INTEGRATION.md  README.md  demo_enhanced.sh  deploy-to-lisk.sh  run_demo.sh
backend/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.sh
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  errors.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: api_key.rs  health_authority.rs  health_record.rs  mod.rs  user.rs  zk_proof.rs
backend/src/routes/: auth.rs  health_authorities.rs  health_records.rs  mod.rs  zk_proofs.rs
backend/src/services/: auth.rs  blockchain.rs  crypto.rs  health_record.rs  mod.rs  zk_proof.rs
contracts/: .env  .env.example  LISK_DEPLOYMENT.md  hardhat.config.js  package-lock.json  package.json
contracts/.openzeppelin/: unknown-4202.json
contracts/cache/: solidity-files-cache.json  validations.json
contracts/contracts/: HealthAuthorityRegistry.sol  ZKHealthPassRegistry.sol  ZKProofVerifier.sol
contracts/scripts/: check-balance.js  clear-pending.js  debug-deployment.js  deploy-lisk.js  deploy-minimal.js  deploy.js
frontend/: .env  .env.example  METAMASK_TROUBLESHOOTING.md  README.md  deploy.sh  netlify.toml  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html
generate_inputs/: Cargo.toml
midnight-mcp/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
noir/: Nargo.toml  Prover.toml
(+44 files in other folders)
