[package]
name = "zk-health-pass-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"
argon2 = "0.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment & Configuration
dotenvy = "0.15"
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography (for ZK proof integration)
secp256k1 = { version = "0.28", features = ["rand"] }
sha2 = "0.10"
hex = "0.4"

# HTTP client (for external integrations)
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate limiting
tower-governor = "0.3"

# Additional HTTP utilities
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
